# sumo-dataset-generator

./: .gitignore  README.md  gen.py  gparams-schema.json  lbstats.py  plotter.py  pyproject.toml  sim.py  sumo.py
SUMO-HighD/: .gitignore  __init__.py
SUMOHighD/: __init__.py
examples/l0_lanechange_train/: gparams.yaml  map.net.xml
examples/l1_overtake_train/: gparams.yaml
examples/l2_turn_train/: gparams.yaml
examples/l3_collision_train/: gparams.yaml
genrouter/: README.md  __init__.py  console.py  controller.py  generator.py  genopts.py  graph.py  loadConfig.py  mappingFunctions.py  persons.py  station.py  sumocfg.py  todo  todo.md  vehicles.py
pygenerator/: generator.py  graph.py  vehicles.py
sumodetector/: README.md  __init__.py  console.py  labels.py  map.py  pack.py  packBufferedWriter.py  sumocfg.py  todo.md  tracictl.py  tup.py  vectorMap.py  vehicle.py
utils/: gparams-schema.json  plotter.py
